fixed overflow issue

--- a/Buttons.module.scss
+++ b/Buttons.module.scss
@@ -4,9 +4,9 @@ $bg: #ffffff;
 $bg-accent: #ebebeb;
 
 $animation: all 100ms ease;
-$font-size: 18px;
+$font-size: clamp(12px, 2vw, 18px);
 
-$padding: 10px;
+$padding: clamp(5px, 2vw, 10px);
 
 $border-radius: 10px;
 
@@ -34,8 +34,7 @@ $border-radius: 10px;
   button {
     transition: $animation;
 
-    min-width: 3rem;
-    min-height: 3rem;
+    height: 100%;
 
     cursor: pointer;
 
